# nectar-studio

./: .env.local.example  .gitignore  AGENTS.md  README.md
lighting-engine/: README.md  conftest.py  pyproject.toml
lighting-engine/data/: state.db
lighting-engine/docs/: running_api.md
lighting-engine/docs/superpowers/plans/: 2026-06-03-v1-phases-4-7-implementation.md  2026-06-04-parser-accuracy-implementation.md
lighting-engine/docs/superpowers/specs/: 2026-06-03-v1-design.md  2026-06-04-parser-accuracy-design.md  2026-06-04-v1-lighting-agent-reframe.md
lighting-engine/scripts/: analyze_rcp_dwg.py  export_openapi.py  extract_full_plan_svg.py  extract_room_svgs.py  inject_full_plan.py  inject_room_svgs.py  inspect_dxf.py  preview_room.py  test_design_pipeline.py  test_scene_understanding.py  visualize_parse.py
lighting-engine/src/lighting_engine/: __main__.py  cli.py
lighting-engine/src/lighting_engine/api/: __init__.py  _generation_pipeline.py  _room_helpers.py  (+5 more)
lighting-engine/tests/: conftest.py
lighting-engine/tests/api/: conftest.py  test_app_smoke.py  test_generation.py  test_projects.py  test_rooms.py
lighting-engine/tests/brief/: test_generator_live.py  test_generator_mock.py  test_models.py  test_prompts.py
lighting-engine/tests/design/: test_feature_flag.py  test_intent.py  test_intent_generator.py  test_placement.py  test_retrieval.py  test_room_render.py  test_scene.py  test_scene_understanding.py
lighting-engine/tests/digest/: test_computer.py
lighting-engine/tests/eval/: test_real_delhi_structural.py
lighting-engine/tests/lighting/: test_accent_layer.py  test_decorative_layer.py  test_grid.py  test_lumen_method.py  test_multi_layer.py  test_placement.py  test_standards.py  test_task_layer.py  test_zone_interpreter.py
lighting-engine/tests/lux/: test_uniformity.py
lighting-engine/tests/models/: test_gaps.py  test_geometry.py
lighting-engine/tests/parser/: test_door_anchor.py  test_door_destinations.py  test_door_detection.py  test_double_height.py  test_entities.py  test_floors.py  test_furniture_merge.py  test_gaps.py  test_geometry.py  test_layers.py  test_loader.py  test_mtext.py  test_pipeline_real.py  test_room_tier.py  test_rooms.py  test_sanitize.py  test_snap.py  test_staircases.py  test_wall_cast.py  test_wall_graph.py  test_window_filter.py
lighting-engine/tests/render/: test_furniture.py  test_rcp.py
lighting-engine/tests/scripts/: test_visualize_parse.py
(+132 files in other folders)
