[project]
name = "lighting-engine"
version = "0.1.0"
description = "MVP lighting prescription engine for residential DWG audits"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.43",
  "ezdxf>=1.3.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.0",
  "shapely>=2.0.0",
  "fastapi[standard]>=0.110",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "greenlet>=3.0",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "pyright>=1.1.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lighting_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI uses `Depends(...)` in argument defaults — that's the idiomatic
# pattern. Don't fire B008 on those calls.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.UploadFile"]

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
